...
    <string name="spent">Spent</string>
    <string name="earned">Earned</string>
    <string name="pie_chart_title">Earnings and spendings over the last 5 days</string>

    <string name="no_data_attached_to_account">No data attached to your account was detected</string>
    <string name="current_balance">Current balance</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="add_income_category">Add Income Category</string>
    <string name="add_expense_category">Add Expense Category</string>
    <string name="add_expense_record">Add Expense Record</string>
    <string name="add_income_record">Add Income Record</string>
    
    <string name="wage">Wage</string>
    <string name="business">Business</string>
    <string name="interest">Interest</string>
    <string name="investment">Investment</string>
    <string name="gift">Gift</string>
    <string name="government_payment">Government Payment</string>

    <string name="entertainment">Entertainment</string>
    <string name="groceries">Groceries</string>
    <string name="insurance">Insurance</string>
...
    <string name="clothing">Clothing</string>

    <string name="health">Health</string>
    <string name="doctor_visits">Doctor Visits</string>

    <string name="education">Education</string>
    <string name="other">Other</string>

    <string name="employment">Employment</string>

    <string name="pick_a_date">Pick a date</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="progress">In progress</string>
    <string name="invalid_format">Invalid format</string>
    <string name="category_doesnt_exist">Category does not exist</string>

    <string name="create_custom_category">Create custom category</string>
    <string name="give_a_name_to_category">Give a name to your category</string>
    <string name="unknown">Unknown</string>

    <string name="transaction_history">Transaction History</string>
    <string name="nothing_to_show">Nothing to show</string>

    <string name="expense_categories">Expense categories</string>
    <string name="income_categories">Income categories</string>
    <string name="categories">Categories</string>
    <string name="financial_accounts">Financial Accounts</string>
    <string name="switch_to_this_account">Switch to this account</string>
    <string name="delete_account">Delete account</string>

    <string name="bottom_sheet">Bottom sheet</string>
    <string name="text_field">Text field</string>

    <string name="change_currency">Change currency</string>
    <string name="change_currency_from">Change currency from</string>
    <string name="change_currency_to">to</string>
    <string name="be_advised">Be advised</string>
    <string name="currency_conversion_warning">You can change currency format only once a day. Also, transactions will not be converted to
...
