...
                                              showCurrencySelection = false
                                          })
                                  } else {
                                      NameEditColumn(
                                          focusOnLaunch = !creationResult.isError(),
                                          enabled = !creationResult.isInProgress(),
                                          newName = name,
                                          onNewName = { name = it },
                                          onNameEdit = {
                                              onCreate(it, balance)
                                          })
                                  }
                              },
...


@Preview
@Composable
fun AccountsScreenPreview() {
    val accountId = UUID.randomUUID().toString()
    val accounts = listOf(Account(accountId, name = "name")) + List(5) {
        Account(name = "name $it")
    }
    MoneyMonocleTheme {
        Surface {
            AccountsContent(
                uiState = AccountsViewModel.UiState(
...
