...
            try {
                val userRef = firestore.collection(uid).document(currentAccountId)
                val defaultRawCategories = if (record.expense) defaultRawExpenseCategories else defaultRawIncomeCategories
                val query = userRef.collection(if (record.expense) "customExpenseCategories"
                else "customIncomeCategories")
                // check if current category is not default. if it is, return null
                val categoryId = if (!defaultRawCategories.map { it.category }.contains(record.category)) selectedCategoryId else null
                if (categoryId != null && query.whereEqualTo("id", selectedCategoryId).get().await().isEmpty) {
                    emit(CustomResult.ResourceError(R.string.category_doesnt_exist))
                    // return if category doesn't exist
                    return@flow
                }
                userRef.collection("records").document(record.id)
...
